@@ -42,12 +42,13 @@ DIST boost_1_49_0.tar.bz2 48499961 SHA256 dd748a7f5507a7e7af74f452e1c52a64e651ed
 DIST boost_1_52_0.tar.bz2 54421709 SHA256 222b6afd7723f396f5682c20130314a10196d3999feab5ba920d2a6bf53bac92 SHA512 fc512d3bfa6a39a60fee548775c97239271cf757587b8df7ed739c800844a819a359dca172be0e69ad7752753753139bf11f0813d650066d58386662fe32842d WHIRLPOOL 73bbab4a1d2a652200f4b5e669440a2afcebcea96a1139ecc75213067ca32d5cadb0f060bb0ec2e29e9e31272fb7ec9d2cb960801032ee6c5dcb86564766411d
 EBUILD boost-1.49.0-r2.ebuild 16098 SHA256 878ad6f01c0450493dc47849f5c3cf76634621947c2967f8f5ccbfcb434384d3 SHA512 ca809ef89dc23c04b40a83dc0c24ca1866f26cabc5ac2f60622b544c8c2c68aea53ab7d0244436af687c646f2f22930e1d9507eca46c8d6c57b517e54f05417f WHIRLPOOL e25662c22d81f3df309b1435aa5ee0a3b7cbabcef4eafb739f3d102b8cf97237763403ec7389de42db0e535c78a48cbf102d6e9f253c1fd7eb69daa58e1052b2
 EBUILD boost-1.52.0-r4.ebuild 10594 SHA256 843e3609bf703e8145a7ab803395840106200087e3907761b5d0389d6776cfe0 SHA512 9542d05160732d404fac2c491187351006b257dcd93bc5dabb4ebc25d3804a4bc5bbeef1abca07a856bdc9cc95132fdfd172560bcd009931f6418e884e16f528 WHIRLPOOL 9a14aa2d5b8832439627edf4db25efc78bd935985e919b877bdb88ac52a74dab5e3288bbd80dcc517b6eb56b733b494a389eec14f65f5884ae350ba8eba8e633
-MISC ChangeLog 48894 SHA256 725b3fef50511e3ab4b4b815b70f418de510bf95f9bdd2989cd3223bc4d7d0e9 SHA512 d509f649689640502413dbee59b0f2141c3e68798472467ec204ddd2f3b6a4dde0bb1897695e9a9a62106703cc616a3552c14d633fe46e5b07555e1755490ccb WHIRLPOOL 1b338a4fe9dee02a8dd9b88e1b18efec17febe6b5c87fb62e86868d1083529cbe0d7990b2fa32f3364865c4d8431a232f6d1049867ef4d8dd45689baaba6fa9a
-MISC metadata.xml 1367 SHA256 da06c3791932e01be8294a352a8d4ea6f7c5218ae3d4636fa405329ca9bfee0e SHA512 39ba0f66bf4b97d3d623f43d3f68ef8b7dfa6f2ddb6f11748f646e189bd6e7ab030069f34eccaecb74306fc79a6d955271d3e133f1761cf14015fa792304f1df WHIRLPOOL b62a61213d39a23b40b80fa749edf44823af51e17392794e21b47d64dab6f91a4c0e9775bf3fa6eefa623ad3efec7696c7915ea7edf95cfbfb087476e6478576
+EBUILD boost-1.52.0-r5.ebuild 10285 SHA256 12ab79b2164ae68a5ec75b839c5b054c6eeb00f7c754567277667fd75da45c51 SHA512 ccbc7fa9000fac56fdd7616999f17bc8ef5403521999dcc3b4c6a066acd61457d334b5c4cacdb25b071e90a16612d282d6678bd41ffb6a6f945d3a627485f549 WHIRLPOOL af9692d665ff1bbb7c3346be470616b540be5c95d2940e0688982bff46934c0e2aca7a61fc50fc8199fe2d6def0e9d4b791db216b54348e344ab2265323a19b9
+MISC ChangeLog 49039 SHA256 b6b9b1a230ec6e8dc727138df84cb78ce87164d008b1bf3ced76b0cda91d40c8 SHA512 b9523f8a3741432bf400c20ec8985b2303befc12f0bb037c9d249554895a9aaa326426e211420e4510d4349ef42a4a07603dd072a8cbaedab80ca869f323ec98 WHIRLPOOL 026c267f9c8c976c2435b1bc953b6d3adc3759156cba0450806d37fd45de6b2e5d71b67754dd409f0118d8210d9217c439b571900efec2b3acd627301dd7b9f4
+MISC metadata.xml 1220 SHA256 12442e258455aa70d08879028a9bb0424d6a5ceea321984009ae7dd51af10c50 SHA512 163fa62be2cad395e8f9bb7779d105bd02be0e09ba4571c41accf707ec25b9ad0d15a62db90c2cc01660b3759235493c00d96f9b741a93fe857c4bea15ac52b9 WHIRLPOOL ae70da326b7b36689ee9a7f3c29921e9e4d85fd7f8b7863866ff9aa7a86eae2983fb12e23f7f0a0aac35a8c09572954ebf67212bb103bed4e15ee2e4ec764ba0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (Darwin)
 
-iEYEAREIAAYFAlC+OdQACgkQX3X2B8XHTokBKACePyc3X2oFbnSdXK59hBmK/XTd
-6QQAnRoG+FKa4uFjxm6OHq8g9evKzPt5
-=eQ8w
+iEYEAREIAAYFAlDiAcQACgkQX3X2B8XHTonp0ACeKWxTQRhSTsMTodb8kkESjDaN
+HrAAnisQ38yTM6lF5n1hu4ZJ6mJkC0m8
+=3Jv3
 -----END PGP SIGNATURE-----
