@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/boost
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.285 2012/11/22 19:48:37 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.286 2012/12/15 14:45:27 mgorny Exp $
+
+*boost-1.52.0-r5 (15 Dec 2012)
+
+  15 Dec 2012; Michał Górny <mgorny@gentoo.org> +boost-1.52.0-r5.ebuild,
+  metadata.xml:
+  Migrate to python-r1.
 
   04 Dec 2012; Fabian Groffen <grobian@gentoo.org> boost-1.52.0-r4.ebuild:
   Reduce differences with gx86
